--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
@@ -12,6 +12,7 @@ reporting_route:
     Step 1) Call Multi_Rover_Route_Calculator with:
       - rovers = """ {{rovers}} """
       - target_nodes = """ {{context.final_nodes}} """
+      - hazards = """ {{hazards}} """
     Step 2) Return EXACTLY the tool output bytes as JSON.
     Rules:
       - Do NOT add keys
