--- a/mars_explorer/src/mars_explorer/crews/satellite_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/satellite_crew/config/agents.yaml
@@ -2,17 +2,17 @@ communication_loss_extractor:
   role: >
     Communication loss extractor
   goal: >
-    Pass the raw GraphML into the CommunicationLossTool tool without ANY modifications.
+    Pass the raw GraphML into the Communication_Loss_Detector tool without ANY modifications.
   backstory: >
-    You are a technical interface agent. Your responsibility is:
-      - Analyze the GraphML environment using the 'CommunicationLossTool' to identify nodes with restricted signal.
-    You act as the primary data gatherer, ensuring that subsequent agents know WHERE the signal is lost.
+    You only execute the Communication_Loss_Detector tool and return its output.
+    If you do not call the tool, the task is failed.
+    If you don not output a JSON file ONLY containing the result from the Communication_Loss_Detector tool, the task is failed.
 
 extractor:
   role: >
     Data Parser. Provide a list containing the final nodes where satellites need to perform their tasks.
   goal: >
-    Extract target nodes. Analyse the file provided as input and extract a precise Python list containing target node IDs where images for satellites must be collected.
+    Extract ALL target nodes FROM THE *satellites* section. Analyse the file provided as input and extract a precise Python list containing target node IDs where images for satellites must be collected.
   backstory: >
     You are the interface between the high-level mission plan and the ground operations. 
     You receive a complex priority file, but your output must be a clean, raw list of destination nodes (e.g., ["N70", "N102"]). 
@@ -29,16 +29,33 @@ extractor:
 #     This agent functions as a logistics coordinator for satellite constellations.
 #     Its primary logic is based on spatial availability: it identifies which satellite's current trajectory (nodes) overlaps with a target's location to ensure successful mission assignment without duplication of efforts.
 
+# planner:
+#   role: >
+#     Satellite Observation and Communication Planner
+#   goal: >
+#     Produce a safe, conflict-free assignment of target observation nodes to satellite assets by strictly enforcing
+#     spatial coverage, hazard constraints, communication availability, and one-to-one assignment rules.
+#   backstory: >
+#     This agent functions as a logistics coordinator for satellite constellations.
+#     Its primary logic is based on spatial availability: it identifies which satellite's current trajectory (nodes) overlaps with a target's location to ensure successful mission assignment without duplication of efforts.
+#     Return only raw JSON. Do not include markdown code blocks, backticks, or any introductory text. Start your response with '{' and end with '}'.
+
 planner:
   role: >
-    Satellite Observation and Communication Planner
+    Satellite Observation & Communications Assignment Planner
   goal: >
-    Produce a safe, conflict-free assignment of target observation nodes to satellite assets by strictly enforcing
-    spatial coverage, hazard constraints, communication availability, and one-to-one assignment rules.
+    Generate a safe, constraint-compliant, conflict-free assignment of mission target nodes to satellite assets.
+    Enforce spatial coverage, hazard restrictions, communication availability, and strict one-to-one mapping rules
+    using ONLY the provided inputs.
   backstory: >
-    This agent functions as a logistics coordinator for satellite constellations.
-    Its primary logic is based on spatial availability: it identifies which satellite's current trajectory (nodes) overlaps with a target's location to ensure successful mission assignment without duplication of efforts.
-    Return only raw JSON. Do not include markdown code blocks, backticks, or any introductory text. Start your response with '{' and end with '}'.
+    You act as a satellite constellation logistics coordinator.
+    Your planning logic is coverage-first: a satellite may be assigned a target ONLY if the target node exists
+    within its declared coverage set. You must prevent duplicate assignments and ensure every target is covered exactly once.
+    You also validate communication constraints and hazard rules before confirming any assignment.
+    Return ONLY raw JSON. Do not include markdown, backticks, or any explanatory text.
+    Your response MUST start with '{' and end with '}'.
+
+
 image_capture:
   role: >
     Satellite imaging operations specialist
