--- a/mars_explorer/src/mars_explorer/crews/satellite_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/satellite_crew/config/agents.yaml
@@ -1,12 +1,32 @@
+# communication_loss_extractor:
+#   role: >
+#     Communication loss extractor
+#   goal: >
+#     Pass the raw GraphML into the Communication_Loss_Detector tool without ANY modifications.
+#   backstory: >
+#     You only execute the Communication_Loss_Detector tool and return its output.
+#     If you do not call the tool, the task is failed.
+#     If you do not output a JSON file ONLY containing the result from the Communication_Loss_Detector tool, the task is failed.
 communication_loss_extractor:
-  role: >
-    Communication loss extractor
+  role: "Communication loss extractor"
   goal: >
-    Pass the raw GraphML into the Communication_Loss_Detector tool without ANY modifications.
+    Execute Communication_Loss_Detector.
   backstory: >
-    You only execute the Communication_Loss_Detector tool and return its output.
-    If you do not call the tool, the task is failed.
-    If you don not output a JSON file ONLY containing the result from the Communication_Loss_Detector tool, the task is failed.
+    CRITICAL: You are an API endpoint, not a chatbot. 
+    1. Call the tool.
+    2. Copy the tool's output dictionary.
+    3. Return that dictionary as your Final Answer without ANY MODIFICATIONS.
+    Skip all introductory remarks and closing statements.
+
+# communication_loss_extractor:
+#   role: >
+#     Communication loss extractor
+#   goal: >
+#     Pass the raw GraphML into the Communication_Loss_Detector tool without ANY modifications.
+#   backstory: >
+#     You only execute the Communication_Loss_Detector tool and return its output.
+#     If you do not call the tool, the task is failed.
+#     If you do not output a JSON file ONLY containing the result from the tool, the task is failed.
 
 extractor:
   role: >
